--- a/application/templates/security/login_user.html
+++ b/application/templates/security/login_user.html
@@ -10,7 +10,7 @@
   {{ render_field_with_errors(login_user_form.password) }}
   {{ render_field_with_errors(login_user_form.remember) }}
   {{ render_field(login_user_form.next) }}
-  {{ render_field(login_user_form.submit) }}
+  {{ render_field(login_user_form.submit) }}g
 </form>
 {% include "security/_menu.html" %}
 
